@@ -216,9 +216,9 @@ public class DBFReader extends FormatReader<DBFHeader> {
 						dataInputStream.read( t_float);
 						t_float = Utils.trimLeftSpaces( t_float);
 						if (t_float.length > 0 && !Utils.contains( t_float, (byte)'?')) {
-							recordObjects[i] = new Float( new String( t_float));
+//							recordObjects[i] = new Float( new String( t_float));
+							recordObjects[i] = Float.valueOf(new String( t_float));
 						} else {
-
 							recordObjects[i] = null;
 						}
 					} catch (NumberFormatException e) {
@@ -233,7 +233,8 @@ public class DBFReader extends FormatReader<DBFHeader> {
 						t_numeric = Utils.trimLeftSpaces( t_numeric);
 
 						if( t_numeric.length > 0 && !Utils.contains( t_numeric, (byte)'?')) {
-							recordObjects[i] = new Double( new String( t_numeric));
+//							recordObjects[i] = new Double( new String( t_numeric));
+							recordObjects[i] = Double.valueOf(new String(t_numeric));
 						} else {
 							recordObjects[i] = null;
 						}
